Implement the arbitrary breaks call inside the layout

This doesn't work for required ligatures, and bidi still needs
to be handled as well, but at the least non-required ligatures will
be broken.

BUG:471374


(cherry picked from commit 125c5c186b348411d882e007fe595c1d5aa7dcc7)